# kuka_kr120_robot

kr120_with_torch_moveit_config/config/: kr120_with_torch.srdf~
kr120_with_torch_moveit_config/launch/: descartes_pathplanning.launch  descartes_pathplanning.launch~
kuka_kr120_robot/: CMakeLists.txt  package.xml
kuka_kr120_with_torch_moveit_config/launch/: moveit.rviz
