<package>
  <name>kuka_kr120_robot</name>
  <version>0.0.1</version>
  <description>Configuration files for using the Kuka kr120 robot in <a class="https" href="https://github.com/JeroenDM/descartes_tutorials">this tutorial</a>. The robot support files are from the kuka_experimental package. A welding torch is added to the robot.</description>

  <maintainer email="jeroendemaeyer@live.be">Jeroen De Maeyer</maintainer>
  <license>Apache2.0</license>
  <url type="website">https://github.com/JeroenDM/kuka_kr120_robot</url>
  <author email="jeroendemaeyer@live.be">Jeroen De Maeyer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>kr120_with_torch</run_depend>
  <run_depend>kr120_with_torch_ikfast</run_depend>
  <run_depend>kr120_with_torch_moveit_config</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
